refactor(mercadona): apply clean code and convert models to records